--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
     <head>
         <title>Nurture Early Learning</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <head>
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        </head>
     </head>
     <body>
         <div class="container">
