--- a/index.html
+++ b/index.html
@@ -2,35 +2,15 @@
 <html>
     <head>
         <title>Nurture Early Learning</title>
-        <head>
-            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        </head>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
-    <body>
+    <body class="bg-light">
         <div class="container">
-            <header>
-                <h1>Welcome to Nurture Early Learning</h1>
+            <header class="my-4">
+                <h1 class="text-primary">Welcome to Nurture Early Learning</h1>
             </header>
             <main>
-                <p>We are a kindergarten business that provides quality education and care for children aged 2-5 years old. Our programs are designed to help children develop their cognitive, social, emotional, and physical skills in a safe and nurturing environment.</p>
-                <p>You can learn more about our programs and services by visiting our <a href="#">website</a>.</p>
-                <form>
-                    <h2>Register Your Interest</h2>
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" required><br><br>
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required><br><br>
-                    <label for="child-age">Child's Age:</label>
-                    <select id="child-age" name="child-age" required>
-                        <option value="">Select an age range</option>
-                        <option value="2-3">2-3 years old</option>
-                        <option value="3-4">3-4 years old</option>
-                        <option value="4-5">4-5 years old</option>
-                    </select><br><br>
-                    <label for="message">Message:</label>
-                    <textarea id="message" name="message"></textarea><br><br>
-                    <input type="submit" value="Submit">
-                </form>
+                <p class="text-secondary">We are a kindergarten business that provides quality education and care for children aged 2-5 years old. Our programs are designed to help children develop their cognitive, social, emotional, and physical skills in a safe and nurturing environment.</p>
             </main>
         </div>
     </body>
