--- a/index.html
+++ b/index.html
@@ -5,16 +5,32 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     </head>
     <body class="bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Nurture Early Learning</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#main">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#form">Enquire</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         <div class="container">
-            <header class="my-4">
+            <header class="my-4" id="header">
                 <h1 class="text-primary">Welcome to Nurture Early Learning</h1>
             </header>
-            <main>
+            <main id="main">
                 <p class="text-secondary">We are a kindergarten business that provides quality education and care for children aged 2-5 years old. Our programs are designed to help children develop their cognitive, social, emotional, and physical skills in a safe and nurturing environment.</p>
             </main>
-        </div>
-        <div>
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqbpFTcvg9ZTs9Uh7gt2uWgzbNVvOklnDbDcyo62woY8dNMw/viewform?embedded=true" width="640" height="711" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <div id="form">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfqbpFTcvg9ZTs9Uh7gt2uWgzbNVvOklnDbDcyo62woY8dNMw/viewform?embedded=true" width="640" height="711" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            </div>
         </div>
     </body>
 </html>
