--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Nurture Early Learning</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body class="bg-light">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -17,6 +18,13 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#form">Enquire</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.facebook.com/yourPage" target="_blank">
+                            <i class="fab fa-facebook-f"></i> Facebook
+                        </a>
                     </li>
                 </ul>
             </div>
