Add logo to navbar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
         <div class="container">
             <header class="my-4" id="header">
-                <h1 class="text-primary">Welcome to Nurture Early Learning</h1>
+                <h1 class="text-primary">About</h1>
             </header>
             <main id="main">
                 <p class="text-secondary">We are a kindergarten business that provides quality education and care for children aged 2-5 years old. Our programs are designed to help children develop their cognitive, social, emotional, and physical skills in a safe and nurturing environment.</p>
