Add logo to navbar

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
                         <a class="nav-link" href="#form">Enquire</a>
                     </li>
                 </ul>
+                <div class="navbar-brand mx-auto">
+                    <img src="src/images/logo.jpg" alt="Logo" class="navbar-logo">
+                </div>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.facebook.com/yourPage" target="_blank">
